apps/prd-web/manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-static-web-prd
  labels:
        app: simple-static-web
  namespace: prd-web   
spec:
  replicas: 2
  selector:
    matchLabels:
      app: simple-static-web
  template:
    metadata:
      labels:
        app: simple-static-web
    spec:   
      containers:
        - name: simple-static-web
          image: simple-static-web:1.0.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 81
