apps/prd-web/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-static-web-svc
  namespace: prd-web
spec:
  selector:
    app: simple-static-web
  type: ClusterIP  # or LoadBalancer if your environment supports it
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
